sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_waut/tls_state_switch.sumo
<tls-switch-states>
</tls-switch-states>
